# betwatch-sdk-python

./: .gitignore  .pre-commit-config.yaml  .rtx.toml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml  release_notes.md  requirements-dev.in
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
betwatch/: __about__.py  __init__.py  client.py  client_async.py  exceptions.py  queries.py
betwatch/types/: __init__.py  bookmakers.py  exceptions.py  filters.py  markets.py  race.py  updates.py
examples/: get_race_prices.py  get_race_prices_async.py  get_races.py  get_races_async.py  get_races_async_lightweight.py  subscriptions.py  update_rated_prices.py
tests/: __init__.py  test_check_last_updated.py  test_get_race.py  test_get_race_async.py  test_get_races.py  test_get_races_async.py  test_subscribe_race_updates.py  test_unknown_enum_values.py
