[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betwatch"
description = 'A Python package for interacting with the Betwatch.com API'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "Jamie Watts", email = "jamie@betwatch.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "gql[aiohttp,websockets,requests]==3.5.0b3",
    "typedload==2.21",
    "aiohttp==3.8.3",
    "python-dateutil==2.8.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/betwatch/betwatch-sdk-python#readme"
Issues = "https://github.com/betwatch/betwatch-sdk-python/issues"
Source = "https://github.com/betwatch/betwatch-sdk-python"
"Betwatch.com" = "https://betwatch.com"

[tool.hatch.version]
path = "betwatch/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "pytest-asyncio",
    "black",
    "pre-commit",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=betwatch --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["betwatch/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Always autofix, but never try to fix `F401` (unused imports).
fix = true
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
