[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betwatch"
version = "1.2.2"
description = 'A Python package for interacting with the Betwatch.com API'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["betwatch", "betting", "sports", "api", "sdk"]
authors = [{ name = "Jamie Watts", email = "jamie@betwatch.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "gql[httpx,websockets,requests]==3.5.0b8",
    "typedload==2.26",
    "ciso8601>=2.3.1",
]

[project.urls]
Documentation = "https://github.com/betwatch/betwatch-sdk-python#readme"
Issues = "https://github.com/betwatch/betwatch-sdk-python/issues"
Source = "https://github.com/betwatch/betwatch-sdk-python"
"Betwatch.com" = "https://betwatch.com"


[tool.rye]
managed = true
dev-dependencies = ["pytest>=7.4.3", "pytest-asyncio>=0.21.1", "isort>=5.12.0"]

[tool.rye.scripts]
test = "pytest"

[tool.hatch.version]
path = "betwatch/__about__.py"

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

fix = true

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
