[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betwatch"
version = "1.7.0"
description = 'A Python package for interacting with the Betwatch.com API'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["betwatch", "betting", "sports", "api", "sdk"]
authors = [{ name = "Jamie Watts", email = "jamie@betwatch.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "gql[httpx,websockets,requests]>=4.0.0",
    "typedload>=2.39",
    "ciso8601>=2.3.3",
]

[project.urls]
Documentation = "https://github.com/betwatch/betwatch-sdk-python#readme"
Issues = "https://github.com/betwatch/betwatch-sdk-python/issues"
Source = "https://github.com/betwatch/betwatch-sdk-python"
"Betwatch.com" = "https://betwatch.com"


[tool.rye]
managed = true
dev-dependencies = ["pytest>=7.4.3", "pytest-asyncio>=0.21.1"]

[tool.rye.scripts]
test = "pytest"

[tool.hatch.version]
path = "betwatch/__about__.py"

[tool.ruff]
exclude = [".rye"]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, isort, and other useful rules
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
# Never enforce line length violations
ignore = ["E501"]

# Ignore import violations in __init__.py files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["betwatch"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.1",
    "commitizen>=4.1.0",
    "git-cliff>=2.7.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.7.0"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
annotated_tag = true

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

"""
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }}))\
    {% endfor %}
{% endfor %}\n
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactoring" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Testing" },
    { message = "^chore\\(release\\):", skip = true },
    { message = "^chore\\(deps\\)", skip = true },
    { message = "^chore", group = "Miscellaneous Tasks" },
    { body = ".*security", group = "Security" },
    { message = "^revert", group = "Revert" },
]
filter_commits = false
tag_pattern = "v[0-9]*"
topo_order = false
sort_commits = "oldest"
